# shit-chat-says

./: .gitignore  Cargo.toml
prisma/: Cargo.toml  dev.db  schema.prisma
src/: main.rs
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  index.tsx
web/src/rspc/: bindings.ts  index.ts
